hphp/test/slow/nullsafe/nullsafe-prop-4.php.expectf
Fatal error: ?-> is not allowed in write context in %s/test/slow/nullsafe/nullsafe-prop-4.php on line 5
